--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -1,5 +1,25 @@
+# Will clean the build data
+clean:
+	rm *.out || true
+	rm *.log || true
+
+# UNinstalls the programm
+uninstall:
+	make clean
+	rm ${HOME}/bin/pzpi-16-2-bekuzarov-maksym-lab5.out
+
+
+# archives the whole shit into one tar.gz
+archive:
+	tar -czvf pzpi-16-2-bekuzarov-maksym-lab5.tar.gz Makefile configure.sh install.sh pzpi-16-2-bekuzarov-maksym-lab5.c misc.c misc.h README.md
+
+
 all:
 	gcc -o pzpi-16-2-bekuzarov-maksym-lab5.out pzpi-16-2-bekuzarov-maksym-lab5.c misc.c
+
+run:
+	gcc -o pzpi-16-2-bekuzarov-maksym-lab5.out pzpi-16-2-bekuzarov-maksym-lab5.c misc.c
+	./pzpi-16-2-bekuzarov-maksym-lab5.out
 
 install:
 	chmod +x ./install.sh
@@ -7,18 +27,3 @@ install:
 	./configure.sh
 	gcc -o pzpi-16-2-bekuzarov-maksym-lab5.out pzpi-16-2-bekuzarov-maksym-lab5.c misc.c
 	./install.sh
-
-uninstall:
-	make clean
-	rm ${HOME}/bin/pzpi-16-2-bekuzarov-maksym-lab5.out
-
-clean:
-	rm *.out || true
-	rm *.log || true
-
-run:
-	gcc -o pzpi-16-2-bekuzarov-maksym-lab5.out pzpi-16-2-bekuzarov-maksym-lab5.c misc.c
-	./pzpi-16-2-bekuzarov-maksym-lab5.out
-
-archive:
-	tar -czvf pzpi-16-2-bekuzarov-maksym-lab5.tar.gz Makefile configure.sh install.sh pzpi-16-2-bekuzarov-maksym-lab5.c misc.c misc.h README.md
